# NCDSimilarityBench

./: LICENSE  README.md  pyproject.toml
src/similaritybench/: __init__.py  datasets.py
