[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "similaritybench"
version = "0.0.1"
dependencies = [
    "importlib_resources",
    "numpy",
    "torchvision",
]
authors = [
  { name="Jona Otholt", email="Jona.Otholt@hpi.de" },
]
description = "Semantic Similarity Benchmarks for Novel Class Discovery"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/J-L-O/NCDSimilarityBench"
"Bug Tracker" = "https://github.com/J-L-O/NCDSimilarityBench/issues"
